          non-existing files.
        - DSSS should now only install dependencies which are not handled (even
          if they're handled externally to DSSS).
        - Rebuild: Moved document generation back into rebuild.
        - Rebuild: Support for pragma(nolink) (see ticket #57).
        - Future versions should be upgradeable with `dsss net install dsss`
          (see ticket #26).

0.64 from 0.63:
        - Rebuild: Added "rerun" mode, which acts like a more robust rdmd (see
          ticket #28).
        - Rebuild: <prefix>/include/d is always included automatically in the
          import path, so that rebuild can be used more easily in isolation
          with DSSS-installed software.
        - Added `dsss net depslist` command.
        - Made `dsss uninstall` explicitly require an argument.
        - Rebuild: Fixed -K flag (see ticket #56).
        - Rebuild: Made --prefix=<absolute path> work properly on Windows when
          backslashes are used (see ticket #53).

0.63 from 0.62:
        - Made OS X -arch, -isysroot and -framework flags work with dsss as
          well as rebuild (see ticket #27).
        - Improved documentation.
        - Merged DMD 1.013.
        - Rebuild: Added flags= variable to configuration files (see ticket #44).
        - Added predigen and postdigen commands (see ticket #49).
        - Made `dsss install` install rebuild's man page as well as DSSS' (see
          ticket #47).
        - Rebuild: Added -gui flag (see ticket #50).

0.62 from 0.61:
        - Added man page for DSSS.
        - Made --prefix and family work with relative paths (see ticket #37).
        - Rebuild: No longer links the same library more than once in a row
          (though it will still link it multiple times in total, due to
          complexities of Posix linking) (see ticket #39).
        - Rebuild: Made export_version accept an identifier as well as a string
          (see ticket #40).