@@ -7,6 +7,7 @@ version (!Windows) {
 }
 
 preinstall=install rebuild$EXE_EXT $BIN_PREFIX ; \
+    install rebuild_choosedc$EXE_EXT $BIN_PREFIX ; \
     install rebuild.conf/default $ETC_PREFIX/rebuild ; \
     install rebuild.conf/phobos $ETC_PREFIX/rebuild ; \
     install rebuild.conf/tango $ETC_PREFIX/rebuild ; \
@@ -17,7 +18,8 @@ preinstall=install rebuild$EXE_EXT $BIN_PREFIX ; \
     install rebuild.conf/dmd-posix $ETC_PREFIX/rebuild ; \
     install rebuild.conf/dmd-posix-tango $ETC_PREFIX/rebuild ; \
     install rebuild.conf/dmd-win $ETC_PREFIX/rebuild ; \
-    install rebuild.conf/dmd-win-tango $ETC_PREFIX/rebuild
+    install rebuild.conf/dmd-win-tango $ETC_PREFIX/rebuild ; \
+    install testtango.d $PREFIX/share/rebuild
 
 version (Posix) {
     # install the rerun link
