@@ -1,0 +1,4 @@
+/* Simple Tango tester - do whatever you want with this code - no warrantee */
+class A {
+    override char[] toUtf8() { return ""; }
+}
